<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.thepeoplesjukebox.jukebox.JukeboxHome">

    <item
        android:id="@+id/action_catalog"
        android:orderInCategory="1"
        android:title="@string/action_catalog"
        app:showAsAction="never" />
    <item
            android:id="@+id/action_sync_catalog"
            android:orderInCategory="1"
            android:title="@string/action_sync_catalog"
            app:showAsAction="never" />
    <item
            android:id="@+id/action_play_jukebox"
            android:orderInCategory="1"
            android:title="@string/action_play_jukebox"
            app:showAsAction="never" />
    <item
            android:id="@+id/action_logout"
            android:orderInCategory="2"
            android:title="@string/action_logout"
            app:showAsAction="never" />
    <item
            android:id="@+id/action_about"
            android:orderInCategory="3"
            android:title="@string/action_about"
            app:showAsAction="never" />
    <item
            android:id="@+id/action_settings"
            android:orderInCategory="4"
            android:title="@string/action_settings"
            app:showAsAction="never" />
</menu>
