<?xml version = "1.0" encoding = "utf-8"?>
<android.support.constraint.ConstraintLayout
                xmlns:android = "http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:tools = "http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height = "match_parent"
                app:layout_behavior="@string/appbar_scrolling_view_behavior"
                tools:showIn="@layout/activity_jukebox_about"
                tools:context = ".JukeboxHome">

    <TextView android:text="@string/action_about"
              android:layout_width="match_parent"
              android:layout_height="75sp"
              android:id="@+id/about_header"
              android:textSize="25sp"
              android:layout_marginTop="50sp"
              app:layout_constraintStart_toStartOf="parent"
              app:layout_constraintTop_toTopOf="parent"
              app:layout_constraintBottom_toTopOf="@+id/about_back_button"
              android:textAlignment="center"/>

    <TextView android:text="@string/action_about_version"
              android:layout_width="match_parent"
              android:layout_height="50sp"
              android:id="@+id/about_version"
              android:textSize="25sp"
              android:layout_marginTop="2sp"
              app:layout_constraintStart_toStartOf="parent"
              app:layout_constraintTop_toBottomOf="@+id/about_header"
              app:layout_constraintBottom_toTopOf="@+id/about_back_button"
              android:textAlignment="center"/>
    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back"
            android:id="@+id/about_back_button"
            app:layout_constraintTop_toBottomOf="@+id/about_version"/>


</android.support.constraint.ConstraintLayout>